# SceneForge

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
api/: main.py
cli/: main.py
core/: config.py  pipeline.py
core/agents/: __init__.py  architect.py  assembler.py  base.py  brief.py  concept.py  critic.py  editor.py  producer.py  rewriter.py  writer.py
core/llm/: __init__.py  claude.py  openai_provider.py  provider.py  retry.py
core/schemas/: __init__.py  brief.py  concept.py  critique.py  production.py  project.py  scene.py  structure.py
docs/: README.md  api.md  architecture.md  data-models.md  development.md  usage.md
tests/: conftest.py  test_agents.py  test_schemas.py
web/: README.md
web/app/: layout.tsx  page.tsx
web/app/project/[...path]/: page.tsx
web/lib/: api.ts
