[project]
name = "sceneforge"
version = "0.1.0"
description = "AI writers' room — multi-agent pipeline for video script development"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.12",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.scripts]
sceneforge = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
