[project]
name = "sceneforge"
version = "0.1.0"
description = "AI writers' room — multi-agent pipeline for video script development"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.50",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer[all]>=0.12",
    "fastapi>=0.115",
    "starlette>=0.47.2",
    "uvicorn>=0.30",
    "python-dotenv>=1.2.2",
    "rich>=13.0",
    "loguru>=0.7",
    "urllib3>=2.6.3",
    "requests>=2.33.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sceneforge = "cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
